# cardroom

./: Cargo.toml  LICENSE
src/: main.rs
src/application/: auth.rs  mod.rs  provider.rs
src/application/services/: create_tournament.rs  find_tournaments.rs  join_tournament.rs  mod.rs  observe_table.rs
src/domain/: broadcast.rs  mod.rs  nickname.rs  player.rs  services.rs  table.rs  tournament.rs  traits.rs  tryout.rs
src/infrastructure/: mod.rs
src/infrastructure/delivery/: broadcast.rs  mod.rs  server.rs
src/infrastructure/delivery/endpoints/: create_tournament.rs  find_tournaments.rs  join_tournament.rs  mod.rs  observe_table.rs
src/infrastructure/persistence/: mod.rs  repository.rs
